--- a/test_directory/main.html
+++ b/test_directory/main.html
@@ -3,10 +3,19 @@
     <link rel="stylesheet" href="./css/main.css"/>
   </head>
   <body>
-    <h1>hello, boostcourse web!</h1>
-    <p1>this is test for directory</p1>
-
-    <script src="js/common.js"></script>
+    <ul>
+      <li>
+        <img src="https://images-na.ssl-images-amazon.com/images/I/410MRqhuwKL._AC_SY200_.jpg" class="product-image" >    </li>
+      <li>
+        <img src="https://images-na.ssl-images-amazon.com/images/I/41zM2Tgk0OL._AC_SY200_.jpg" class="product-image" >    </li>
+      <li>
+        <img src="https://images-na.ssl-images-amazon.com/images/I/41h6jz58IvL._AC_SY200_.jpg" class="product-image" >  </li>
+     <li>
+        <img src="https://images-na.ssl-images-amazon.com/images/I/415vAS0SRLL._AC_SY200_.jpg" class="product-image" >
+     </li>
+    </ul>
+    
+    <section class="log"></section>
     <script src="js/main.js"></script>
   </body>
 </html>
